test/param/ferguson/param-real-init-imag-error.chpl
param neg32:imag(32) = -1.0;
writeln(neg32.type:string, " ", neg32);
